# ansible-inventory-server

./: .gitignore  API.md  README.md  requirements.txt  setup.cfg
ansible_inventory_server/: aisrest.py  app.py  jujurest.py  maasrest.py  settings.py  utils.py
ansible_inventory_server/config/: config.yml
awx/: creds_juju_injector.yaml  creds_juju_input.yaml  creds_maas_injector.yaml  creds_maas_input.yaml
docker/: Dockerfile  docker-compose.yml
docker/config/: config.yml.sample
helm/ansible-inventory-server/: Chart.yaml  README.md  values.schema.json  values.yaml
helm/ansible-inventory-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
scripts/: juju_inventory_script.py  maas_inventory_script.py
