[pbr]
skip_authors = True
skip_changelog = True

[metadata]
name = ansible_inventory_server
author = Stamatis Katsaounis
author-email = skatsaounis@admin.grnet.gr
summary = REST Server for Dynamic Ansible Inventories
description-file = README.md

[files]
packages =
    ansible_inventory_server

[entry_points]
console_scripts =
    ansible-inventory-server = ansible_inventory_server.app:main

[bdist_wheel]
universal = 1
